# lancet

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: black.yml  release.yml  release_binaries.yml  release_windows.yml
lancet/: __main__.py  config.py  consts.py  exceptions.py  find_executable.py  keyboard_shortcuts.py  lancet.desktop  notifications.py  ocr.py  ocr_history.py  preferences.py  system_tray.py
lancet/gui/: about_dialog.py  color_picker.py  dialog_registry.py  enum_select_combo.py  form_widgets.py  geom_dialog.py  grab_key.py  line_edit.py  ocr_history_widget.py  ocr_model_list.py  preferences.py  preferences_widget.py  utils.py
lancet/keyboard_shortcuts/: global_hotkeys.py  hotkey.py  listener.py  types.py
lancet/model_utils/: base.py  common.py  device.py  model_loader.py  ocr_service.py  ocr_workflow.py
lancet/ocr/: manga_ocr.py  manga_ocr_base.py  manga_ocr_launcher.py  ocr.py  op.py  thread_op.py
lancet/text_detector_client/: model_cache.py  text_detector.py  text_detector_base.py
scripts/: build-binary.sh  format.sh  install-build-deps.sh  venv-build.sh
tests/: helpers.py  test_config.py  test_find_executable.py  test_keyboard_shortcuts.py
