[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.18",
    "hatch-vcs>=0.4",
]

[project]
name = "ajt-lancet"
dynamic = ["version"]
description = "OCR snipping tool for reading manga."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["AJATT", "OCR"]
authors = [
    { name = "Ajatt-Tools and contributors" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "beartype>=0.22.9",
    "PyQt6>=6.8.0",
    "pillow>=12.1.0",
    "pynput>=1.8.1", # "pynput @ git+https://github.com/moses-palmer/pynput.git@fixup/listener-thread-handle",
    "fire>=0.7.1",
    "jaconv>=0.5.0",
    "loguru>=0.7.0",
    "numpy>=2.4.0",
    "torch>=2.11", # https://pypi.org/project/torch/
    "transformers>=5.6.2", # needed by manga_ocr
    "opencv-python", # needed to 'import cv2', used by comic text detector
    "torchvision", # needed by comic text detector
    "pyclipper", # needed by comic text detector
    "shapely", # needed by comic text detector
    "requests", # needed to download comic_text_detector model 'comictextdetector.pt'
    "fugashi>=1.5.0", # needed by bert_japanese/tokenization_bert_japanese.py
    "unidic_lite>=1.0.8", # needed by bert_japanese/tokenization_bert_japanese.py
    "zala>=26.4.26.0",
    # Or use a local folder:
    #"zala @ git+file:///home/ren/Documents/Projects/Zala",
]
[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/lancet#readme"
Issues = "https://github.com/Ajatt-Tools/lancet/issues"
Source = "https://github.com/Ajatt-Tools/lancet"

[project.scripts]
lancet = "lancet.__main__:main"

[tool.hatch.version]
source = "vcs"
path = "lancet/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "lancet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lancet tests}"

[tool.hatch.build.targets.wheel]
packages = ["lancet", "comic_text_detector"]

[tool.coverage.run]
source_pkgs = ["lancet", "tests"]
branch = true
parallel = true
omit = [
    "lancet/__about__.py",
]

[tool.coverage.paths]
lancet = ["src/lancet", "*/lancet/src/lancet"]
tests = ["tests", "*/lancet/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py313']
extend-exclude = "comic_text_detector"

[tool.isort]
profile = "black"

[tool.hatch.envs.hatch-test]
# https://hatch.pypa.io/latest/config/internal/testing/
# https://hatch.pypa.io/latest/tutorials/testing/overview/
dependencies = [
    "mypy>=1.0.0",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
]
parallel = true
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
# https://hatch.pypa.io/latest/tutorials/testing/overview/#testing-projects
python = ["3.13", ]

[tool.hatch.envs.hatch-static-analysis]
# https://hatch.pypa.io/latest/how-to/static-analysis/behavior/
dependencies = ["black", "flake8", "isort", "pyupgrade"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = [
    "bash scripts/format.sh", # run as: hatch fmt -f
]
lint-check = "flake8 --max-line-length 120 {args:.}"
lint-fix = "lint-check"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore:There is no current event loop",
]

# Build-only dependencies for PyInstaller binary creation
[dependency-groups]
binary = [
    "pyinstaller",
]
